# AccordDaTools

./: CMakeLists.txt  CONTRIBUTIONS.md  LICENSE  README  README.md  compile.py  config.ini  makefile  plotxy.py  prep.ksh  tuneBR.py
.github/workflows/: checkout.yml  cmake.yml  documentation.yml  github-actions-demo.yml
dev/: .documenter-siteinfo.json  index.html  search_index.js
dev/cvheaderlist/: index.html
dev/dfs/: index.html
dev/diacov/: index.html
dev/jbdiagnose/: index.html
dev/varbccoeff/: index.html
doc/: make.jl
doc/src/: clddet.md  cvheaderlist.md  dfs.md  diacov.md  index.md  jbdiagnose.md  varbccoeff.md
doc/tools/: ObsTool.md  diacov.md  festat.md  jbdiagnose.md
modules/: __init__.py  gsacov.py  odb.py  setting_env.py  sigma_bo.py
nam/: satellite_instruments.nml
odb/: CCMA_minim_2023110212.tar
scripts/: 1_extract_varbc_cycle.ksh  1_extract_varbc_cycle.sh  1prepare_obstool.sh  2_varbc_fig.ksh  2_varbc_fig.sh  2monitor_obstool.sh  CMakeLists.txt  README.txt  clddet_diagnosis.sh  clddet_plotter.sh  cv_header_list.sh  dep_stats.py  depstat.sh  dfscomp.sh  diacov.sh  diag_diacov.sh  festat.job  festat_S1.py  festat_S2.job  jbdiagnose.sh  plotdepstat.py  plotdfs.py  plotdiacov.py  plotjbbal.py  plotvarbccoeff.py  plotvarbcpred.py  profile_obstool.sh  readme.txt  rundepstat.sh  rundiacov.ksh  rundiacov.sh  runfestat.sh  runploty.ksh  varbc_plot.Rsh  varbcdiagnose.sh
share/: CMakeLists.txt  include.paths
share/levdef/: harmL65.def  hirlL60.def  mfL70.def  mfL90.def
src/: CMakeLists.txt  array_definitions.F90  average.F90  clddet.py  clddet_analyzer.f90  cv_header_list.F90  depstat_main.F90  dfscomp.F90  fetchOneTime.F90  getSensorNumber.F90  get_satinfo.R  get_statistics.R  jbdiagnose.F90  monitoring_ascat.R  monitoring_conv.R  monitoring_sat.R  obstat.f90  parameters.F90  plotjbbal.py  plotjbdiag.py  prepare.F90  preparing_conv.R  preparing_sat.R  prepdiacov.F90  read_odb.R  readgsa.F90  report.F90  vcoordinate.F90  visualisation.R
tests/: CMakeLists.txt
tests/tools/: CMakeLists.txt  test_diag_diacov_help.sh  test_jbdiagnose_help.sh  test_plotdiacov_help.sh  test_plotjbbal_help.sh  test_plotjbdiag_help.sh  test_plotvarbcpred_help.sh  test_rundiacov_help.sh  test_varbcdiagnose_help.sh
